styles/main.css
      /* * * * * * */
      /* variables */
      /* * * * * * */

:root {
  --color-main: #000;
  --color-bg: #dfdfdf;
  --color-highlight: #fff;
  --spacing-xs: 10px;
  --spacing-s: 20px;
  --spacing-m: 40px;
  --spacing-l: 60px;
  --spacing-xl: 100px;
  --header-height: 40px;
}

html {
  position: relative;
  font-family: 'DM Mono', monospace;
  font-size: 10px;
  color: var(--color-main);
  background: var(--color-bg);
}

/* reset */
body, h1, h2, h3, p, blockquote, ul, li {
  margin: 0;
  padding: 0;
  font-size: 2rem;
  line-height: 3rem;
  font-weight: 300;
}

a {
  color: #4933f9;
  text-decoration: none;
}

      /* * * * * */
      /* layout  */
      /* * * * * */

body {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: var(--spacing-s);
}

header {
  position: absolute;
  top: var(--spacing-s);
  left: var(--spacing-s);
}

main {
  margin: calc(var(--header-height) + var(--spacing-xl)) 0;
  max-width: 1350px;
}
.main--home {
  display: inline-flex;
  align-items: flex-end;
}
.main--center {
  text-align: center;
}

.column--image {
  float: left;
  width: 350px;
}
.column--text {
  float: right;
  width: calc(100% - 420px);
}

      /* * * * * * * */
      /* typography  */
      /* * * * * * * */

h1 {
  display: inline-block;
  border-bottom: 3px solid;
  padding-bottom: 3px;
  font-weight: 500;
}
h1 a {
  font-weight: 500;
  color: inherit;
}
h1 a:not(.nav-item-link):hover {
  background-color: var(--color-bg);
}

span {
  display: inline-block;
}
strong span {
  color: var(--color-highlight);
}

p:not(:last-child) {
  margin-bottom: var(--spacing-m);
}
p.nav-toggle:not(:last-child) {
  margin-bottom: 0;
}

blockquote {
  border-left: 3px solid var(--color-highlight);
  padding: 0 0 var(--spacing-m) var(--spacing-s);
}

a:not(.nav-item-link) {
  display: inline-block;
  margin: 0 -3px;
  padding: 0 3px;
  transition: background-color .2s;
}
a:not(.nav-item-link):hover {
  background-color: var(--color-highlight);
}

.caption {
  margin-top: var(--spacing-xs);
  max-width: 350px;
  font-size: 1.5rem;
  font-style: italic;
}

      /* * * */
      /* nav */
      /* * * */

nav {
  display: inline-block;
}

.nav-item {
  display: inline-block;
  margin-left: var(--spacing-s);
  list-style-type: none;
}

.nav-item-link {
  display: inline-block;
  border-bottom: 3px solid;
  border-color: var(--color-bg);
  padding-bottom: 3px;
  color: inherit;
  /* transition: border-color .2s; */
}
.nav-item-link:hover,
.nav-item-link--current {
  border-color: var(--color-highlight);
}

.nav-toggle {
  display: none;
  text-align: right;
  font-size: 1.5rem;
}
.nav-toggle:before {
  content: "(";
  margin-right: 1px;
}
.nav-toggle:after {
  content: ")";
  margin-left: 1px;
}

      /* * * * * */
      /* images  */
      /* * * * * */

img {
  margin-right: var(--spacing-m);
  max-width: 350px;
}

      /* * * * * * * * * */
      /* responsiveness  */
      /* * * * * * * * * */

@media (max-width: 1000px) {
  html {
    font-size: 9px;
  }
  h1, .nav-item-link {
    padding-bottom: 2px;
  }
  h1, blockquote, .nav-item-link {
    border-width: 2px;
  }
  img {
    max-width: 250px;
  }
  .column--image {
    width: 250px;
  }
  .column--text {
    width: calc(100% - 300px);
  }
}

@media (max-width: 700px) {
  body, main, .main--home {
    display: block;
  }
  header {
    position: relative;
    top: 0;
    left: 0;
  }
  main {
    margin: calc(var(--header-height) + var(--spacing-xs)) 0;
  }
  .column--image,
  .column--text {
    float: none;
    width: 100%;
  }
  .column--image {
    margin-bottom: var(--spacing-l);
  }
  p:not(.nav-toggle):not(.caption) {
    margin-top: var(--spacing-l);
  }
  img {
    margin-right: 0;
    max-width: 100%;
  }
  blockquote {
    margin-top: var(--spacing-m);
    margin-left: 0;
    border-left: 0;
    padding: 0;
  }
  blockquote:before {
    display: block;
    content: " ";
    margin-bottom: var(--spacing-s);
    width: 15%;
    border-top: 2px solid var(--color-highlight);
  }
  /* nav */
  h1 {
    margin-bottom: var(--spacing-s);
  }
  nav {
    display: flex;
    flex-direction: column;
    text-align: center;
  }
  .nav-item {
    display: none;
    margin: var(--spacing-s) 0 0 0;
  }
  .nav-item:not(.nav-item--current) {
    order: -1;
    text-align: right;
    font-size: 1.5rem;
  }
  .nav-toggle,
  .nav-item.nav-item--current,
  .nav--active .nav-item {
    display: block;
  }
}

/* latin-ext */
@font-face {
  font-family: 'DM Mono';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: local('DM Mono Light Italic'), local('DMMono-LightItalic'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTT7PB1QTsUX8KYth-orYadYY35dFpHuZJ_.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'DM Mono';
  font-style: italic;
  font-weight: 300;
  font-display: swap;
  src: local('DM Mono Light Italic'), local('DMMono-LightItalic'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTT7PB1QTsUX8KYth-orYadb435dFpHuQ.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'DM Mono';
  font-style: italic;
  font-weight: 500;
  font-display: swap;
  src: local('DM Mono Medium Italic'), local('DMMono-MediumItalic'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTT7PB1QTsUX8KYth-o9YedYY35dFpHuZJ_.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'DM Mono';
  font-style: italic;
  font-weight: 500;
  font-display: swap;
  src: local('DM Mono Medium Italic'), local('DMMono-MediumItalic'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTT7PB1QTsUX8KYth-o9Yedb435dFpHuQ.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'DM Mono';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: local('DM Mono Light'), local('DMMono-Light'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTR7PB1QTsUX8KYvrGyEY2tbYf-Vlh3uA.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'DM Mono';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: local('DM Mono Light'), local('DMMono-Light'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTR7PB1QTsUX8KYvrGyEYOtbYf-Vlg.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'DM Mono';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: local('DM Mono Medium'), local('DMMono-Medium'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTR7PB1QTsUX8KYvumzEY2tbYf-Vlh3uA.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'DM Mono';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: local('DM Mono Medium'), local('DMMono-Medium'), url(https://fonts.gstatic.com/s/dmmono/v2/aFTR7PB1QTsUX8KYvumzEYOtbYf-Vlg.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

